# tabulardata-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_column_slice_summary.rs  03_column_encoder_roundtrip.rs  04_filter_rows.rs  05_groupby_counts.rs  06_join_frames.rs  07_any_column_snapshot.rs  08_sort_rows.rs  09_csv_reader_subset.rs  10_csv_writer_string.rs  11_any_row_mutation.rs  12_summary_report.rs  13_slicing_rows_and_columns.rs  14_json_io.rs  15_typed_protocols.rs  16_dataframe_mutation.rs  17_group_summary_split.rs  18_io_expansion.rs
examples/shared/: mod.rs
src/: any_column.rs  any_row.rs  column.rs  column_encoder.rs  column_slice.rs  csv_reader.rs  csv_writer.rs  dataframe.rs  error.rs  filter.rs  formatting.rs  groupby.rs  join.rs  json.rs  lib.rs  mutation.rs  private.rs  protocols.rs  sframe.rs  shaped_data.rs  slicing.rs  sort.rs  split.rs  summary.rs
src/ffi/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/TabularDataBridge/: AnyColumn.swift  AnyRow.swift  CSVReader.swift  CSVWriter.swift  ColumnEncoder.swift  ColumnSlice.swift  Core.swift  DataFrame.swift  (+10 more)
tests/: any_column_tests.rs  any_row_tests.rs  column_encoder_tests.rs  column_slice_tests.rs  csv_reader_tests.rs  csv_writer_tests.rs  dataframe_mutation_tests.rs  dataframe_tests.rs  filter_tests.rs  group_summary_split_tests.rs  groupby_tests.rs  io_expansion_tests.rs  join_tests.rs  json_tests.rs  slicing_tests.rs  sort_tests.rs  summary_tests.rs  typed_protocol_tests.rs
tests/common/: mod.rs
(+1 files in other folders)
